removed bulk code for showing login/signup forms, routes handle functionality

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,13 +4,13 @@
     color: whitesmoke;
 }
 
-#login-form {
+/* #login-form {
     display: none;
 }
 
 #signup-form {
     display: none;
-}
+} */
 
 #login-signup {
     display: block;
