start login form functionality. still not connected to backend, but methods for handleChange/handleSubmit are drafted. attempts to connect to the backend via axios were not a success.

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -9,8 +9,15 @@
     min-width: 300px;
 }
 
-.form-container {
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 25px;
+    border-bottom: 2px solid whitesmoke;
+}
 
+a {
+    text-decoration: none;
 }
 
 .form-container input {
