--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,12 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
+
 * {
     text-align: center;
     background-color: black;
     color: whitesmoke;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Michroma', sans-serif;
 }
 
-p, a {
-    font-size: 20px;
+p, nav a {
+    font-size: 24px;
+}
+
+.selected-date {
+    font-size: 1.7em;
+    color: #990000;
 }
 
 #hekate-logo {
@@ -30,49 +37,81 @@ a {
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+    margin-bottom: 10px;
     padding: 5px;
     width: 250px;
     height: 25px;
-    border: 1px solid rgb(224, 223, 223);
-    font-size: 16px;
+    border: 2px solid rgb(224, 223, 223);
+    font-size: 20px;
 }
 
 .form-container select {
     padding: 3px;
     width: 262px;
     height: 35px;
-    border: 1px solid rgb(224, 223, 223);
-    font-size: 16px;
+    border: 2px solid rgb(224, 223, 223);
+    font-size: 14px;
+}
+
+template span {
+    font-size: 14px;
+}
+
+.record-form-container {
+    width: 500px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.record-form-container input {
+    margin: 10px
+}
+
+section {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+label {
+    font-size: 20px;
+    margin: 5px 0;
+}
+
+label:hover {
+    color: #990000;
 }
 
 button {
     margin: 10px 5px;
-    width: 200px;
+    width: 250px;
     height: 50px;
     font-size: 20px;
     padding: 5px 10px;
     color: whitesmoke;
-    border: 1px solid rgb(224, 223, 223);
+    border: 2px solid rgb(224, 223, 223);
     border-radius: 4px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 600;
+    font-family: 'Michroma', sans-serif;
 }
 
 button:hover {
-    color: darkred;
-    font-weight: 600;
+    color: #990000;
     cursor: pointer;
+    border: 2px solid #990000;
 }
 
 a:hover {
-    color: darkred;
+    color: #990000;
 }
 
 textarea {
-    width: 400px;
+    width: 500px;
     height: 150px;
-}
+    font-size: 20px;
+    margin-bottom: 15px;
+    border: 2px solid rgb(224, 223, 223);
+    border-radius: 4px;
 
-.selected-date {
-    color: darkred;
 }
