--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -17,8 +17,9 @@ p, nav a {
 }
 
 #hekate-logo {
-    max-width: 375px;
+    max-width: 425px;
     min-width: 300px;
+    border-radius: 50%;
 }
 
 nav {
@@ -66,7 +67,8 @@ template span {
 }
 
 .record-form-container input {
-    margin: 10px
+    margin: 5px;
+    cursor: pointer;
 }
 
 section {
@@ -82,6 +84,7 @@ label {
 
 label:hover {
     color: #990000;
+    cursor: pointer;
 }
 
 button {
@@ -91,15 +94,20 @@ button {
     font-size: 20px;
     padding: 5px 10px;
     color: whitesmoke;
-    border: 2px solid rgb(224, 223, 223);
     border-radius: 4px;
     font-family: 'Michroma', sans-serif;
 }
 
 button:hover {
-    color: #990000;
+    background-color: #990000;
     cursor: pointer;
-    border: 2px solid #990000;
+    border-top: none;
+    border-left: none;
+}
+
+button:active {
+    color: whitesmoke;
+    background-color: #990000;
 }
 
 a:hover {
@@ -113,5 +121,4 @@ textarea {
     margin-bottom: 15px;
     border: 2px solid rgb(224, 223, 223);
     border-radius: 4px;
-
 }
